--- a/TofuBot/TofuBot.csproj
+++ b/TofuBot/TofuBot.csproj
@@ -12,4 +12,8 @@
       <ProjectReference Include="..\TofuBot.AI\TofuBot.AI.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="YamlDotNet" Version="16.3.0" />
+    </ItemGroup>
+
 </Project>
