--- a/TofuBot.AI/TofuBot.AI.csproj
+++ b/TofuBot.AI/TofuBot.AI.csproj
@@ -7,7 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Npgsql" Version="9.0.3" />
+      <PackageReference Include="OpenAI" Version="2.1.0" />
       <PackageReference Include="Pgvector" Version="0.3.2" />
     </ItemGroup>
 
