--- a/TofuBot/TofuBot.csproj
+++ b/TofuBot/TofuBot.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0-preview.5.25277.114" />
       <PackageReference Include="YamlDotNet" Version="16.3.0" />
     </ItemGroup>
 
